# cpp-grayscale-converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: Image.hpp  ImageConverter.hpp
include/io/: ConsoleOutput.hpp  ConsoleOutut.hpp  ImageFileOutput.hpp  ImageOutput.hpp
src/core/: Image.cpp  ImageConverter.cpp
src/io/: ConsoleOutput.cpp  ImageFileOutput.cpp
